# rmv4

./: .r1.sh.swp  r1.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/cone_detector/: positionFromDetectRGB.h
devel/lib/cone_detector/: echo  morphology_object_tracking
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/pkgconfig/: cone_detector.pc  kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  kinect_test.pc
devel/share/cone_detector/cmake/: cone_detector-msg-paths.cmake  cone_detectorConfig.cmake
src/cone_detector/: CMakeLists.txt
src/cone_detector/launch/: rmv3test1.launch  rmv3test1.launch~
src/cone_detector/msg/: positionFromDetectRGB.msg
src/cone_detector/src/: corenode.py  corenode.py~  detectTest.py  detectVideo2.py  detectVideo2.py~  myserial.py  myserial.py~  predictPosition.py  rgbd.py  serialTest.py  test.py  testPredict.py  topic_listen.py  topic_publish.py
src/cone_detector/src/model/: model-symbol.json  model2-0030.params  model3-0050.params  model3-0100.params  model3-0200.params  model_MNist1-0020.params  model_MNist1-symbol.json  model_afterEpualizeHist-0200.params  model_afterEpualizeHist-symbol.json  model_use_samples_2-0200.params  model_use_samples_2V2.0-0200.params  model_use_samples_2V2.0-symbol.json
src/cone_detector/src/model/xml/: cascade.xml  cascade_hog_14.xml  kinect_xml.xml  xml.xml
src/kinect_test/: CMakeLists.txt  package.xml
src/kinect_test/scripts/: rgbd.py  rgbd.py~
src/kinect_test/src/: fuben.cpp  rgbd.cpp
(+13 files in other folders)
